--- a/portfolio-site-react/package.json
+++ b/portfolio-site-react/package.json
@@ -14,7 +14,9 @@
     "react-pdf": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.3",
-    "react-scroll": "^1.8.1"
+    "react-scroll": "^1.8.1",
+    "react-typical": "^0.1.3",
+    "react-typist": "^2.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
