--- a/portfolio-site-react/.gitignore
+++ b/portfolio-site-react/.gitignore
@@ -1,5 +1,8 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
+# keys
+portfolio-site-ad71f-firebase-adminsdk-rpnn4-95bfee1215.json
+
 # dependencies
 /node_modules
 /.pnp
