--- a/portfolio-site-react/package.json
+++ b/portfolio-site-react/package.json
@@ -6,17 +6,18 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
-    "firebase": "^7.21.1",
+    "firebase": "^7.24.0",
     "firebase-admin": "^9.2.0",
     "react": "^16.13.1",
     "react-burger-menu": "^2.7.1",
     "react-dom": "^16.13.1",
     "react-pdf": "^5.0.0",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.3",
+    "react-scripts": "^3.4.4",
     "react-scroll": "^1.8.1",
     "react-typical": "^0.1.3",
-    "react-typist": "^2.0.5"
+    "react-typist": "^2.0.5",
+    "uuid": "^8.3.1"
   },
   "scripts": {
     "start": "react-scripts start",
