--- a/portfolio-site-react/.gitignore
+++ b/portfolio-site-react/.gitignore
@@ -1,7 +1,7 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# keys
-portfolio-site-ad71f-firebase-adminsdk-rpnn4-95bfee1215.json
+# keys, configs
+/.env
 
 # dependencies
 /node_modules
