--- a/portfolio-site-react/.gitignore
+++ b/portfolio-site-react/.gitignore
@@ -1,7 +1,6 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# keys
-portfolio-site-ad71f-firebase-adminsdk-rpnn4-95bfee1215.json
+
 
 # dependencies
 /node_modules
@@ -16,6 +15,7 @@ portfolio-site-ad71f-firebase-adminsdk-rpnn4-95bfee1215.json
 
 # misc
 .DS_Store
+.env
 .env.local
 .env.development.local
 .env.test.local
