--- a/portfolio-site-react/package.json
+++ b/portfolio-site-react/package.json
@@ -9,16 +9,19 @@
     "dotenv": "^8.2.0",
     "firebase": "^7.24.0",
     "firebase-admin": "^9.2.0",
+    "moment": "^2.29.1",
     "react": "^16.13.1",
     "react-burger-menu": "^2.7.1",
     "react-dom": "^16.13.1",
+    "react-dropdown-date": "^2.2.4",
     "react-pdf": "^5.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^3.4.4",
     "react-scroll": "^1.8.1",
     "react-typical": "^0.1.3",
     "react-typist": "^2.0.5",
-    "uuid": "^8.3.1"
+    "uuid": "^8.3.1",
+    "xtypejs": "^0.7.1"
   },
   "scripts": {
     "start": "react-scripts start",
